crates/whiphand-tui/tests/snapshots/snapshots__detail_artifact_markdown_200x50.snap
---
source: crates/whiphand-tui/tests/snapshots.rs
expression: "render(model, size)"
---
"whiphand  /home/dev/shop  · Run  (experimental)                                                                                                                                                         "
"checkout flow (20261010-100000-a1b2)  feature  running  5m 0s  waiting on you  ⎇ whiphand/checkout                                                                                                      "
"                                                                                                                                                                                                        "
"┌ Steps ───────────────────────────────────────────────────────────────┐┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│  ✔ plan                                                              ││ 1 Log │ 2 Events │ 3 Artifacts │ 4 Diff                                                                                      │"
"│▾ ● fix-cycle  ↻ 2/3                                                  ││plan.md  o pager · q back                                                                                                     │"
"│    ● execute ×2                                                      ││# Plan: checkout totals                                                                                                       │"
"│    ○ tests ×2                                                        ││                                                                                                                              │"
"│  ○ sign-off                                                          ││Round once, at the end, with `Math.round`.                                                                                    │"
"│                                                                      ││                                                                                                                              │"
"│                                                                      ││## Steps                                                                                                                      │"
"│                                                                      ││                                                                                                                              │"
"│                                                                      ││1. Fix `cartTotal`                                                                                                            │"
"│                                                                      ││2. Add a test for 0.1 + 0.2                                                                                                   │"
"│                                                                      ││                                                                                                                              │"
"│                                                                      ││    ┌ ts                                                                                                                      │"
"│                                                                      ││    export const cents = (x: number) => Math.round(x * 100) / 100;                                                            │"
"│                                                                      ││                                                                                                                              │"
"│                                                                      │││ Ask before touching tax.                                                                                                    │"
"│                                                                      ││                                                                                                                              │"
"│                                                                      ││                                                                                                                              │"
"│                                                                      ││                                                                                                                              │"
"│                                                                      ││                                                                                                                              │"
"│                                                                      ││                                                                                                                              │"
"│                                                                      ││                                                                                                                              │"
"│                                                                      ││                                                                                                                              │"
"│                                                                      ││                                                                                                                              │"
"│                                                                      ││                                                                                                                              │"
"│                                                                      ││                                                                                                                              │"
"│                                                                      ││                                                                                                                              │"
"│                                                                      ││                                                                                                                              │"
"│                                                                      ││                                                                                                                              │"
"│                                                                      ││                                                                                                                              │"
"│                                                                      ││                                                                                                                              │"
"│                                                                      ││                                                                                                                              │"
"│                                                                      ││                                                                                                                              │"
"│                                                                      ││                                                                                                                              │"
"│                                                                      ││                                                                                                                              │"
"│                                                                      ││                                                                                                                              │"
"│                                                                      ││                                                                                                                              │"
"│                                                                      ││                                                                                                                              │"
"│                                                                      ││                                                                                                                              │"
"│                                                                      ││                                                                                                                              │"
"│                                                                      ││                                                                                                                              │"
"│                                                                      ││                                                                                                                              │"
"│                                                                      ││                                                                                                                              │"
"│                                                                      ││                                                                                                                              │"
"│                                                                      ││                                                                                                                              │"
"└──────────────────────────────────────────────────────────────────────┘└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
" Tab switch pane  ·  1-4 tabs  ·  h ← collapse  ·  l → expand  ·  e errors only  ·  a every step's rows  ·  o open the artifact in $PAGER  ·  D git diff in a terminal  ·  r reload the diff  ·  ? help "
