crates/whiphand-tui/tests/snapshots/snapshots__detail_artifact_markdown_80x24.snap
---
source: crates/whiphand-tui/tests/snapshots.rs
expression: "render(model, size)"
---
"whiphand  /home/dev/shop  · Run  (experimental)                                 "
"checkout flow (20261010-100000-a1b2)  feature  running  5m 0s  waiting on you  ⎇"
"                                                                                "
"┌ Steps ───────────────────────────────────────────────────────────────────────┐"
"│  ✔ plan                                                                      │"
"│▾ ● fix-cycle  ↻ 2/3                                                          │"
"│    ● execute ×2                                                              │"
"│    ○ tests ×2                                                                │"
"│  ○ sign-off                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌──────────────────────────────────────────────────────────────────────────────┐"
"│ 1 Log │ 2 Events │ 3 Artifacts │ 4 Diff                                      │"
"│plan.md  o pager · q back                                                     │"
"│# Plan: checkout totals                                                       │"
"│                                                                              │"
"│Round once, at the end, with `Math.round`.                                    │"
"│                                                                              │"
"│## Steps                                                                      │"
"│                                                                              │"
"│1. Fix `cartTotal`                                                            │"
"│2. Add a test for 0.1 + 0.2                                                   │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
" Tab switch pane  ·  1-4 tabs  ·  h ← collapse  ·  l → expand  ·  e errors only "
