crates/whiphand-tui/tests/snapshots/snapshots__detail_artifacts_200x50.snap
---
source: crates/whiphand-tui/tests/snapshots.rs
expression: "render(model, size)"
---
"whiphand  /home/dev/shop  · Run  (experimental)                                                                                                                                                         "
"checkout flow (20261010-100000-a1b2)  feature  running  5m 0s  waiting on you  ⎇ whiphand/checkout                                                                                                      "
"                                                                                                                                                                                                        "
"┌ Steps ───────────────────────────────────────────────────────────────┐┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│  ✔ plan                                                              ││ 1 Log │ 2 Events │ 3 Artifacts │ 4 Diff                                                                                      │"
"│▾ ● fix-cycle  ↻ 2/3                                                  ││plan.md                                                                                                                       │"
"│    ● execute ×2                                                      ││fix-cycle/1/tests.log                                                                                                         │"
"│    ○ tests ×2                                                        ││                                                                                                                              │"
"│  ○ sign-off                                                          ││                                                                                                                              │"
"│                                                                      ││                                                                                                                              │"
"│                                                                      ││                                                                                                                              │"
"│                                                                      ││                                                                                                                              │"
"│                                                                      ││                                                                                                                              │"
"│                                                                      ││                                                                                                                              │"
"│                                                                      ││                                                                                                                              │"
"│                                                                      ││                                                                                                                              │"
"│                                                                      ││                                                                                                                              │"
"│                                                                      ││                                                                                                                              │"
"│                                                                      ││                                                                                                                              │"
"│                                                                      ││                                                                                                                              │"
"│                                                                      ││                                                                                                                              │"
"│                                                                      ││                                                                                                                              │"
"│                                                                      ││                                                                                                                              │"
"│                                                                      ││                                                                                                                              │"
"│                                                                      ││                                                                                                                              │"
"│                                                                      ││                                                                                                                              │"
"│                                                                      ││                                                                                                                              │"
"│                                                                      ││                                                                                                                              │"
"│                                                                      ││                                                                                                                              │"
"│                                                                      ││                                                                                                                              │"
"│                                                                      ││                                                                                                                              │"
"│                                                                      ││                                                                                                                              │"
"│                                                                      ││                                                                                                                              │"
"│                                                                      ││                                                                                                                              │"
"│                                                                      ││                                                                                                                              │"
"│                                                                      ││                                                                                                                              │"
"│                                                                      ││                                                                                                                              │"
"│                                                                      ││                                                                                                                              │"
"│                                                                      ││                                                                                                                              │"
"│                                                                      ││                                                                                                                              │"
"│                                                                      ││                                                                                                                              │"
"│                                                                      ││                                                                                                                              │"
"│                                                                      ││                                                                                                                              │"
"│                                                                      ││                                                                                                                              │"
"│                                                                      ││                                                                                                                              │"
"│                                                                      ││                                                                                                                              │"
"│                                                                      ││                                                                                                                              │"
"│                                                                      ││                                                                                                                              │"
"└──────────────────────────────────────────────────────────────────────┘└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
" Tab switch pane  ·  1-4 tabs  ·  h ← collapse  ·  l → expand  ·  f errors only  ·  A every step's rows  ·  o open the artifact in $PAGER  ·  D git diff in a terminal  ·  Ctrl-r reload the diff  ·  c "
